--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "cross-env NODE_ENV=test jest --config ./tests/jest.config.js",
+    "test:sheetRoutes": "cross-env NODE_ENV=test jest --config ./tests/jest.config.js tests/routes/sheetRoutes.test.js",
     "migrate": "sequelize-cli db:migrate --env development",
     "migrate:test": "sequelize-cli db:migrate --env test",
     "undo:migrate": "sequelize-cli db:migrate:undo --env development",
