--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "cross-env NODE_ENV=test jest --config ./tests/jest.config.js",
+    "test": "cross-env NODE_ENV=test jest --config ./tests/jest.config.js --verbose",
     "test:sheetRoutes": "cross-env NODE_ENV=test jest --config ./tests/jest.config.js tests/routes/sheetRoutes.test.js",
     "migrate": "sequelize-cli db:migrate --env development",
     "migrate:test": "sequelize-cli db:migrate --env test",
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -38,7 +39,6 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "bcrypt": "^5.1.1",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
