--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,6 @@ NODE_ENV=development
 JWT_SECRET=your_super_secret_jwt_key
 
 # Database Configuration
-DATABASE_URL=postgres://sheetuser:5675@localhost:5432/spreadsheetdb
-# TEST_DATABASE_URL=postgres://sheetuser:5675@localhost:5432/spreadsheetdb_test
+DATABASE_URL_LOCAL=postgres://sheetuser:5675@localhost:5432/spreadsheetdb
+DATABASE_URL_DOCKER=postgres://sheetuser:5675@db:5432/spreadsheetdb
 REFRESH_TOKEN_SECRET=ref_token
