--- a/.env.test.example
+++ b/.env.test.example
@@ -2,5 +2,6 @@
 PORT=3000
 NODE_ENV=test
 JWT_SECRET=your_test_jwt_secret
-TEST_DATABASE_URL=postgres://sheetuser:5675@localhost:5432/spreadsheetdb_test
+TEST_DATABASE_URL_LOCAL=postgres://sheetuser:5675@localhost:5432/spreadsheetdb_test
+TEST_DATABASE_URL_DOCKER=postgres://sheetuser:5675@db:5432/spreadsheetdb_test
 REFRESH_TOKEN_SECRET=ref_token
